java 11, springdoc, netty